# shotgun

./: .gitignore  2d-batch.md  CMakeLists.txt  README.md
3rd/: CMakeLists.txt
3rd/corrade/src/Corrade/PluginManager/Test/: Canary.cpp  Snail.cpp  configure.h.cmake
3rd/corrade/src/Corrade/PluginManager/Test/wrong/: CMakeLists.txt
3rd/plugins/src/: CMakeLists.txt
3rd/plugins/src/Magnum/OpenDdl/: visibility.h
src/: CMakeLists.txt  MyApplication.cpp
src/client/: CMakeLists.txt  main.cpp
src/gfx/: CMakeLists.txt
